--- a/CruzadaSite/Cruzada/templates/ventas.html
+++ b/CruzadaSite/Cruzada/templates/ventas.html
@@ -61,7 +61,7 @@
 {#                                                </div>#}
 {#                                            </td>#}
                                             <td class="text-center ">
-                                                <a href="{% url 'venta' %}" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Editar</a>
+                                                <a href="{% url 'venta_id' transaccion_id=venta.id %}" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Editar</a>
 {#                                                <a href="#" class="delete btn btn-sm btn-default"><i class="fa fa-times-circle"></i> Remove</a>#}
                                             </td>
                                         </tr>
