--- a/CruzadaSite/Cruzada/templates/ventas.html
+++ b/CruzadaSite/Cruzada/templates/ventas.html
@@ -55,14 +55,12 @@
                                             <td class="dt-center">{{ venta.cliente }}</td>
                                             <td class="dt-center">{{ venta.estado }}</td>
                                             <td class="dt-center">{{ venta.articulos }}</td>
-{#                                            <td class="color-success">#}
-{#                                                <div class="progress">#}
-{#                                                    <div class="progress-bar progress-bar-success" data-aria-valuetransitiongoal="75">{{ articulo.stock }}</div>#}
-{#                                                </div>#}
-{#                                            </td>#}
                                             <td class="text-center ">
+                                                {% if venta.estado == 'GUARDADA' %}
                                                 <a href="{% url 'venta_id' transaccion_id=venta.id %}" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Editar</a>
-{#                                                <a href="#" class="delete btn btn-sm btn-default"><i class="fa fa-times-circle"></i> Remove</a>#}
+                                                {% else %}
+                                                <a href="#" class="edit btn btn-sm btn-default"><i class="fa fa-eye"></i> Ver</a>
+                                                {% endif %}
                                             </td>
                                         </tr>
                                         {% endfor %}
